# refusal-patcher-skill

./: README.md  SKILL.md  claude_patcher.py  pyproject.toml
tests/: test_patcher.py
